WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204742
Service Worker should correctly set its document first party for cookies URL
https://bugs.webkit.org/show_bug.cgi?id=204742
Summary
Service Worker should correctly set its document first party for cookies URL
youenn fablet
Reported
2019-12-02 03:19:07 PST
Service Worker should correctly set its document first party for cookies URL. It seems to have regressed in
https://trac.webkit.org/changeset/230944/webkit
.
Attachments
Patch
(8.65 KB, patch)
2019-12-02 03:28 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-12-02 03:28:57 PST
Created
attachment 384607
[details]
Patch
WebKit Commit Bot
Comment 2
2019-12-02 09:10:43 PST
Comment on
attachment 384607
[details]
Patch Clearing flags on attachment: 384607 Committed
r252985
: <
https://trac.webkit.org/changeset/252985
>
WebKit Commit Bot
Comment 3
2019-12-02 09:10:45 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-12-02 09:11:20 PST
<
rdar://problem/57559730
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug