Service Worker should correctly set its document first party for cookies URL https://bugs.webkit.org/show_bug.cgi?id=204742

Reviewed by Chris Dumez.

Source/WebCore:

Test: http/wpt/service-workers/third-party-cookie.html

* workers/service/context/ServiceWorkerThreadProxy.cpp:
(WebCore::createPageForServiceWorker):
Set document first party cookie for URL to the top origin.

LayoutTests:

* http/wpt/service-workers/resources/set-cookie.py: Added.
* http/wpt/service-workers/resources/third-party-cookie-iframe.html: Added.
* http/wpt/service-workers/resources/third-party-worker.js:
* http/wpt/service-workers/third-party-cookie-expected.txt: Added.
* http/wpt/service-workers/third-party-cookie.html: Added.


Canonical link: https://commits.webkit.org/217958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252985 268f45cc-cd09-0410-ab3c-d52691b4dbfc